# crux-mcp

./: Cargo.toml  README.md  x.rs
src/: error.rs  event_loop.rs  handler.rs  main.rs
src/core/: app.rs  mod.rs
src/core/capabilities/: mod.rs  render.rs  resolve.rs  schema.rs  update.rs  view.rs
src/shell/: host.rs  mod.rs
src/shell/mcp/: handler.rs  mod.rs  resolve.rs  schema.rs  update.rs  view.rs
src/tools/: core.rs  mod.rs  say_hello.rs
