[package]
name = "crux-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
crux_core = { path = "../crux/crux_core" }
rust-mcp-sdk = { version = "0.5.0", features = [
    "server",
    "macros",
    "hyper-server",
    "ssl",
    "2025_03_26",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"
